fix: center text on mobile view

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
   padding: 0;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: #63032f;
+  text-align: center;
 }
 
 body {
